# ChromaScale

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
.github/: LICENSE  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: cli.py  settings.ini  upscaler.py  watcher.py
